ido-tth/main/default/objects/tth_Suggested_Booking__c/tth_Suggested_Booking__c.object-meta.xml
<CustomObject>
    <label>Suggested Booking</label>
    <nameField>
        <displayFormat>SB {0000000}</displayFormat>
        <label>Suggested Booking ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Suggested Bookings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>