ido-tth/main/default/objects/tth_Suggested_Booking__c/fields/tth_Add_ons__c.field-meta.xml
<CustomField>
    <fullName>tth_Add_ons__c</fullName>
    <description>Addition purchased services, extras in combination with and attributed to a booking</description>
    <label>Add-ons</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>tth_Booking_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>tth_Add_ons</valueSetName>
    </valueSet>
</CustomField>