ido-tth/main/default/objects/tth_Suggested_Booking__c/fields/tth_Allocated_Seat__c.field-meta.xml
<CustomField>
    <fullName>tth_Allocated_Seat__c</fullName>
    <label>Allocated Seat</label>
    <length>5</length>
    <type>Text</type>
</CustomField>