ido-tth/main/default/objects/tth_Suggested_Booking__c/fields/tth_Booking_End__c.field-meta.xml
<CustomField>
    <fullName>tth_Booking_End__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>