ido-tth/main/default/objects/tth_Suggested_Booking__c/fields/tth_Booking_End_Date__c.field-meta.xml
<CustomField>
    <fullName>tth_Booking_End_Date__c</fullName>
    <description>If using relative dates, Today minus Days Ago Plus Number of Days, or else it is the End Date absolute value</description>
    <formula>IF( $CustomMetadata.tth_Booking_ReservationSettings__mdt.default.Use_Relative_Dates__c ,(Today()- tth_Days_Ago__c) +  Number_of_Days__c  ,  tth_Booking_End__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking End</label>
    <type>Date</type>
</CustomField>