ido-tth/main/default/objects/tth_Suggested_Booking__c/fields/tth_Booking_Type__c.field-meta.xml
<CustomField>
    <fullName>tth_Booking_Type__c</fullName>
    <label>Booking Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tth_Service_Type</valueSetName>
    </valueSet>
</CustomField>