ido-tth/main/default/objects/tth_Suggested_Booking__c/fields/tth_Booking_Type_Icon__c.field-meta.xml
<CustomField>
    <fullName>tth_Booking_Type_Icon__c</fullName>
    <formula>IF(NOT( ISBLANK(TEXT(tth_Booking_Type__c)) ),  IMAGE(&#39;/resource/tth_service_icons/&#39;+ TEXT( tth_Booking_Type__c ) + &#39;.png&#39;,TEXT( tth_Booking_Type__c ) , 50, 50), &#39;&#39;)</formula>
    <label>Type</label>
    <type>Text</type>
</CustomField>