ido-tth/main/default/objects/tth_Suggested_Booking__c/fields/tth_Bot_Summary__c.field-meta.xml
<CustomField>
    <fullName>tth_Bot_Summary__c</fullName>
    <formula>IF( ISPICKVAL( tth_Booking_Type__c ,&#39;Flight&#39;) , &#39;Flight &#39; +  tth_Flight_Number__c + &#39; departing at &#39; +  tth_Time__c + &#39; sitting in &#39; +  TEXT(tth_Travel_Class__c) + &#39; in seat &#39; +  tth_Allocated_Seat__c,
   IF( ISPICKVAL( tth_Booking_Type__c ,&#39;Car&#39;) , &#39;You are picking up your car from &#39; +  tth_Location__c + &#39; at &#39; +  tth_Time__c ,
      IF( ISPICKVAL( tth_Booking_Type__c ,&#39;Hotel&#39;) || ISPICKVAL( tth_Booking_Type__c ,&#39;Accomodation&#39;) , &#39;Staying at &#39; + tth_Location__c + &#39; in a &#39; +  TEXT(tth_Room_Type__c) + &#39; room &#39;, 
         IF( ISPICKVAL( tth_Booking_Type__c ,&#39;Rail&#39;) || ISPICKVAL( tth_Booking_Type__c ,&#39;Bus&#39;) || ISPICKVAL( tth_Booking_Type__c ,&#39;Ferry&#39;) || ISPICKVAL( tth_Booking_Type__c ,&#39;Transport&#39;), tth_Flight_Number__c + &#39; departing from &#39; +  tth_Location__c + &#39; at &#39; +  tth_Time__c + &#39; in seat &#39; +  tth_Allocated_Seat__c , &#39;&#39;)
      )
   )
)</formula>
    <label>Bot Summary</label>
    <type>Text</type>
</CustomField>