ido-tth/main/default/objects/tth_Suggested_Booking__c/fields/tth_Days_Ago__c.field-meta.xml
<CustomField>
    <fullName>tth_Days_Ago__c</fullName>
    <defaultValue>0</defaultValue>
    <description>If using relative dates (as defined in custom metadata setting) trip start and end dates will be relative to today.
Positive values will be in the past, negative values will be in the future. Default value is ZERO which is &quot;today&quot;</description>
    <label>Days Ago</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>