ido-tth/main/default/objects/tth_Suggested_Booking__c/fields/tth_Rebooking_Required__c.field-meta.xml
<CustomField>
    <fullName>tth_Rebooking_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This booking has been impacted by a Travel disruption and requires rebooking</description>
    <label>Rebooking Required</label>
    <type>Checkbox</type>
</CustomField>