ido-tth/main/default/objects/tth_Suggested_Booking__c/fields/tth_Related_Booking__c.field-meta.xml
<CustomField>
    <fullName>tth_Related_Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Which booking is this suggestion for?</description>
    <label>Related Booking</label>
    <referenceTo>tth_Booking__c</referenceTo>
    <relationshipLabel>Suggested Bookings</relationshipLabel>
    <relationshipName>Suggested_Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>