ido-tth/main/default/objects/tth_Suggested_Booking__c/fields/tth_Status__c.field-meta.xml
<CustomField>
    <fullName>tth_Status__c</fullName>
    <description>What is the status of this booking?</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tth_Booking_Status</valueSetName>
    </valueSet>
</CustomField>